# iax-agrag-agui-lab

./: .gitignore  CLAUDE.md  README.md  iax-agrag-agui-lab.code-workspace  pyproject.toml  test_document.py
.claude/: settings.local.json
docs/: 4.agentic_ideas_for_exploring.md  5.using official agui adk middleware.md  6.exploring_prompts.md  high_level_orchestration_design.md
docs/researchs/: 6.official agui adk impl.md
notebooks/: adk_agents_1.ipynb  hello_agent.py  run_hello_agent.py
src/iax_agrag_agui_lab/: debug.py  run_agents.py  run_agents_official.py  run_hello_agent.py
src/iax_agrag_agui_lab/agents/: agentic_rag.py  coder_agent.py  coordinator_agent.py  hello_agent.py  pizza_agent.py  web_search_agent.py
src/iax_agrag_agui_lab/agents/agrag/: agentic_rag.py  agentic_rag_multi_query.py  query_docs_tool.py  query_iax_docs_tool.py  query_workana_docs_tool.py  workana_rag_agent.py
src/iax_agrag_agui_lab/agents/tools/: tavily_search_tool.py
src/iax_agrag_agui_lab/agui/: adk_agui_agent_server.py
